@@ -1,29 +1,26 @@
 package com.tomtom.scoop.global.config;
 
-import com.tomtom.scoop.global.security.CustomUserDetailsService;
-import com.tomtom.scoop.global.security.JwtTokenFilter;
-import com.tomtom.scoop.global.security.OAuthService;
-import com.tomtom.scoop.global.security.OAuthSuccessHandler;
+import com.tomtom.scoop.global.security.*;
 import com.tomtom.scoop.global.util.JwtTokenUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.web.DefaultSecurityFilterChain;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
-public class WebSecurityConfig{
+public class WebSecurityConfig {
 
     private final OAuthService oAuthService;
     private final OAuthSuccessHandler oAuthSuccessHandler;
@@ -32,15 +29,17 @@ public class WebSecurityConfig{
 
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         http
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
                 .cors()
                 .and()
                 .httpBasic().disable()
                 .formLogin().disable()
                 .csrf().disable().authorizeHttpRequests()
-                .requestMatchers("/v3/api-docs/**", "/swagger*/**", "/swagger-ui/","api-docs.html").permitAll()
+                .requestMatchers("/health", "/", "/v3/api-docs/**", "/swagger*/**", "/swagger-ui/", "/api-docs.html").permitAll()
                 .anyRequest().authenticated()
                 .and()
                 .logout()
@@ -49,6 +48,7 @@ public class WebSecurityConfig{
                 .and()
                 .addFilterBefore(new JwtTokenFilter(customUserDetailsService, jwtTokenUtil), UsernamePasswordAuthenticationFilter.class)
                 .exceptionHandling()
+                .authenticationEntryPoint(new CustomAuthenticationEntryPoint())
                 .and()
                 .oauth2Login()
                 .defaultSuccessUrl("/")
@@ -63,19 +63,14 @@ public class WebSecurityConfig{
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-    @Bean
-    public SecurityFilterChain healthFilterChain(HttpSecurity http) throws Exception {
-        DefaultSecurityFilterChain chain = new DefaultSecurityFilterChain(new AntPathRequestMatcher("/health"));
-        return chain;
     }
 
 }
